# casyuk

./: .gitignore  CODE_OF_CONDUCT.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  proposal_project.md
.github/workflows/: release.yml
landing-page/: README.md  index.html  package-lock.json  package.json  vercel.json
landing-page/public/: install-demo-1080p.webm  install.ps1  robots.txt  sitemap.xml
landing-page/src/: App.tsx  index.css  main.tsx
landing-page/src/components/: FeatureCard.tsx  NeoButton.tsx  StepCard.tsx
landing-page/src/data/: blogs.ts  generateBlogs.cjs  generateViralBlogs.cjs
landing-page/src/data/markdown/: aesthetic-desk-setup-back-to-school.md  aldente-alternative-casyuk.md  analyzed-10000-battery-deaths.md  how-casyuk-uses-rust.md  (+46 more)
landing-page/src/layout/: MainLayout.tsx
landing-page/src/pages/: Blog.tsx  BlogDetail.tsx  Changelog.tsx  Contact.tsx  Docs.tsx  Documentation.tsx  Home.tsx  Pricing.tsx  Privacy.tsx  Roadmap.tsx  Terms.tsx
scripts/: bump-version.sh  install.ps1  install.sh
src/: AlertWindow.tsx  App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: battery.rs  lib.rs  license.rs  main.rs  rules.rs  tray.rs
src/components/: AlertOverlay.tsx  BatteryGauge.tsx  BatteryMonitor.tsx  ChargingControl.tsx  CustomizationPanel.tsx  LicenseModal.tsx  MascotRenderer.tsx  ProGateOverlay.tsx  SettingsPanel.tsx  VideoBank.tsx
src/hooks/: useBattery.ts
src/lib/: videoBank.ts
src/types/: battery.ts
