[package]
name = "casyuk"
version = "0.1.6"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "casyuk_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
battery = "0.7.8"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
tauri-plugin-dialog = "2.7.1"
smc = "0.2.4"
tauri-plugin-aptabase = "1.0.0"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

